<resources>
    <string name="app_name">Quiz PDD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">continue</string>
    <string name="back">Назад</string>
    <string name="study">Учиться</string>
    <string name="training">Тренировка</string>
    <string name="restart">Рестарт</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="reload">Reload</string>
    <string name="excellent">Отлично</string>
    <string name="result">Результат %1$d</string>
    <string name="you_are_welcome">Добро пожаловать!</string>
    <string name="enter_your_email">Введите свой Email</string>
    <string name="enter_your_password">Введите свой пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="error_password">пароль не менее 6 символов</string>
    <string name="error_email">не верный email</string>
</resources>